# media-console-v2

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODING_STANDARDS.md  README.md  REWRITE_PROMPT.md
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/phases/01-foundation-and-build-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-state-layer-and-qml-binding-surface/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-receiver-control/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-audio-pipeline/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-cd-subsystem/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-flac-library/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-gpio-hardware/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-spotify-integration/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md  08-VERIFICATION.md
.planning/phases/09-display-http-api-and-orchestration/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-CONTEXT.md  09-RESEARCH.md  09-VERIFICATION.md
.planning/phases/10-qml-ui-and-production-deployment/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-04-PLAN.md  10-04-SUMMARY.md  10-CONTEXT.md  10-RESEARCH.md  10-VERIFICATION.md
.planning/phases/11-integration-wiring-fixes/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-03-SUMMARY.md  11-CONTEXT.md  11-RESEARCH.md
.planning/phases/12-verification-and-traceability/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  12-02-SUMMARY.md  12-03-PLAN.md  12-03-SUMMARY.md  12-CONTEXT.md  12-RESEARCH.md
.planning/phases/13-inputcarousel-polish/: 13-01-PLAN.md  13-01-SUMMARY.md  13-02-PLAN.md  13-02-SUMMARY.md  13-03-PLAN.md  13-CONTEXT.md  13-RESEARCH.md  13-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
deploy/: install-kiosk.sh  media-console.service  pi-build.sh  uninstall-kiosk.sh
src/: main.cpp
src/api/: HttpApiServer.cpp  HttpApiServer.h
src/app/: AppBuilder.cpp  AppBuilder.h  AppConfig.cpp  AppConfig.h  AppContext.h
src/audio/: AlsaAudioOutput.cpp  AlsaAudioOutput.h  AudioBufferStats.h  AudioRingBuffer.cpp  AudioRingBuffer.h  AudioStream.h  LocalPlaybackController.cpp  LocalPlaybackController.h
src/cd/: CdAlbumArtProvider.cpp  CdAlbumArtProvider.h  CdAudioStream.cpp  CdAudioStream.h  CdController.cpp  CdController.h  CdMetadataCache.cpp  CdMetadataCache.h  CdMetadataProvider.cpp  CdMetadataProvider.h  LibcdioCdDrive.cpp  LibcdioCdDrive.h
src/display/: LinuxDisplayControl.cpp  LinuxDisplayControl.h  ScreenTimeoutController.cpp  ScreenTimeoutController.h
src/orchestration/: AlbumArtResolver.cpp  AlbumArtResolver.h  PlaybackRouter.cpp  PlaybackRouter.h
src/platform/: IAudioOutput.h  ICdDrive.h  IDisplayControl.h  IGpioMonitor.h  LinuxGpioMonitor.cpp  LinuxGpioMonitor.h  PlatformFactory.cpp  PlatformFactory.h  QuadratureDecoder.h
src/platform/stubs/: StubAudioOutput.cpp  StubAudioOutput.h  StubCdDrive.cpp  StubCdDrive.h  StubDisplayControl.cpp  StubDisplayControl.h  StubGpioMonitor.cpp  StubGpioMonitor.h
src/qml/: Theme.qml  main.qml  qmldir
src/qml/components/: InputCarousel.qml  LibraryBrowser.qml  NowPlaying.qml  PlaybackControls.qml  SpotifySearch.qml
src/qml/controls/: AlphabetSidebar.qml  SimpleKeyboard.qml
src/receiver/: EiscpConnection.cpp  EiscpConnection.h  EiscpMessage.cpp  EiscpMessage.h  ReceiverController.cpp  ReceiverController.h  VolumeGestureController.cpp  VolumeGestureController.h
src/spotify/: CliOAuthReplyHandler.h  SpotifyAuth.cpp  SpotifyAuth.h  SpotifyClient.cpp  SpotifyClient.h  SpotifyController.cpp  SpotifyController.h
src/state/: ActiveView.h  CommandSource.h  MediaSource.cpp  MediaSource.h  PlaybackMode.h  PlaybackState.cpp  PlaybackState.h  ReceiverState.cpp  ReceiverState.h  StreamingService.h  UIState.cpp  UIState.h
src/utils/: Logging.cpp  Logging.h
tests/: CMakeLists.txt  test_AlbumArtResolver.cpp  test_AppBuilder.cpp  test_AppConfig.cpp  test_AudioRingBuffer.cpp  test_AudioStream.cpp  test_CdAudioStream.cpp  test_CdController.cpp  test_CdMetadataCache.cpp  test_CdMetadataProvider.cpp  test_EiscpMessage.cpp  test_FlacAudioStream.cpp  test_FlacLibraryController.cpp  test_HttpApiServer.cpp  test_LibraryAlbumArtProvider.cpp  test_LibraryDatabase.cpp  test_LibraryModels.cpp  test_LibraryScanner.cpp  test_LinuxDisplayControl.cpp  test_LocalPlaybackController.cpp  test_MediaSource.cpp  test_PlatformFactory.cpp  test_PlaybackRouter.cpp  test_PlaybackState.cpp  test_QuadratureDecoder.cpp  test_ReceiverController.cpp  test_ReceiverState.cpp  test_ScreenTimeoutController.cpp  test_SpotifyAuth.cpp  test_SpotifyClient.cpp  test_SpotifyController.cpp  test_StubAudioOutput.cpp  test_StubCdDrive.cpp  test_StubDisplayControl.cpp  test_StubGpioMonitor.cpp  test_UIState.cpp  test_VolumeGestureController.cpp
